--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -60,33 +60,33 @@ jobs:
           DATABASE_URL: 'postgresql://postgres:postgres@localhost:5432/prisma?schema=public'
         run: pnpm test:integration
 
-      - name: Log in to GitHub Container Registry
-        # This step is only run on pushes to the main branch
-        if: github.ref == 'refs/heads/main'
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Log in to GitHub Container Registry
+      #   # This step is only run on pushes to the main branch
+      #   if: github.ref == 'refs/heads/main'
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
 
-      - name: Build and push console image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./apps/console/Dockerfile
-          push: ${{ github.ref == 'refs/heads/main' }}
-          tags: ghcr.io/${{ github.repository }}/console:latest
+      # - name: Build and push console image
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: .
+      #     file: ./apps/console/Dockerfile
+      #     push: ${{ github.ref == 'refs/heads/main' }}
+      #     tags: ghcr.io/${{ github.repository }}/console:latest
 
-      - name: Build and push nestjs image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./apps/nestjs/Dockerfile
-          push: ${{ github.ref == 'refs/heads/main' }}
-          tags: ghcr.io/${{ github.repository }}/nestjs:latest
+      # - name: Build and push nestjs image
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: .
+      #     file: ./apps/nestjs/Dockerfile
+      #     push: ${{ github.ref == 'refs/heads/main' }}
+      #     tags: ghcr.io/${{ github.repository }}/nestjs:latest
 
       - name: Stop services
         # This step runs even if previous steps fail, ensuring
