--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "run-p barrel:* && pnpm generate:spec",
     "barrel:zod-validation": "../../scripts/barrel.ts ./src/dto",
-    "test": "vitest run --config __tests__/vitest.config.ts",
+    "test:unit": "vitest run --config __tests__/vitest.unit.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit",
     "generate:spec": "scripts/generate-spec.ts"
