--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,8 +7,8 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "test": "vitest run --config __tests__/vitest.config.ts",
-    "test:coverage": "vitest run --coverage --config __tests__/vitest.config.ts",
+    "test:unit": "vitest run --config __tests__/vitest.unit.config.ts",
+    "test:unit:coverage": "vitest run --coverage --config __tests__/vitest.unit.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
