--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint",
     "dotenvx": "../../scripts/dotenvx.sh",
     "db:generate": "prisma generate",
+    "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
     "db:reset": "prisma migrate reset",
