--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -11,6 +11,7 @@
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
+    "@repo/types": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.5.2",
@@ -18,6 +19,6 @@
   },
   "dependencies": {
     "@repo/utils": "workspace:*",
-    "winston": "^3.18.3"
+    "consola": "^3.4.2"
   }
 }
