--- a/apps/wxt/package.json
+++ b/apps/wxt/package.json
@@ -21,9 +21,11 @@
     "@repo/utils": "workspace:*",
     "@repo/env-config": "workspace:*",
     "@repo/exception": "workspace:*",
+    "@repo/logger": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/ui": "workspace:*",
     "@repo/virtual-authenticator": "workspace:*",
+    "@ts-rest/core": "3.53.0-rc.1",
     "@vitejs/plugin-react": "^5.1.1",
     "@webext-core/messaging": "^2.3.0",
     "@webext-core/proxy-service": "^1.2.1",
